# qa-guru-python-23

./: pyproject.toml
allure-pytest-example/test/: issue_rest_test.py
