[tool.poetry]
name = "qa-guru-python-23"
version = "0.1.0"
description = ""
authors = ["Kornilin5 <sasha_kornilin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
allure-pytest = "^2.13.5"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
